# rls-data

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  Vagrantfile  pyproject.toml
.github/workflows/: lint-and-test.yml  pre-commit.yml  test.yml  update-data.yml  update-jsons.yml
output/: api-site-surveys.min.json  api-species.json  api-species.min.json  raw_species.csv  sites.json  summary.json  summary.min.json
rls/: __init__.py  constants.py  downloader.py  processor.py  scraper.py  util.py
tests/: test_placeholder.py  test_processor.py  test_scraper.py  test_util.py
